--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   collection: ^1.15.0
   wakelock: ^0.5.2
   path_provider: ^2.0.2
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
