--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   wakelock: ^0.5.3+3
   path_provider: ^2.0.2
   intl: ^0.17.0
+  flutter_beep: ^1.0.0
 
 dev_dependencies:
   flutter_test:
