--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   path_provider: ^2.0.2
   intl: ^0.17.0
   flutter_beep: ^1.0.0
+  vibration: ^1.7.4-nullsafety.0
+  excel: ^2.0.0-null-safety-3
+  open_file: ^3.2.1
 
 dev_dependencies:
   flutter_test:
