--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   vibration: ^1.7.4-nullsafety.0
   excel: ^2.0.0-null-safety-3
   open_file: ^3.2.1
+  share_plus: ^3.0.2
 
 dev_dependencies:
   flutter_test:
