Copy match files from internal to external storage

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   excel: ^3.0.0
   open_file: ^3.2.1
   share_plus: ^6.3.4
+  permission_handler: ^11.1.0
 
 dev_dependencies:
   flutter_test:
