--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,13 +29,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.3
   collection: ^1.15.0
-  wakelock: ^0.6.1+1
+  wakelock_plus: ^1.3.2
   path_provider: ^2.0.2
   intl: ^0.19.0
   flutter_beep: ^1.0.0
   excel: ^4.0.3
   open_file: ^3.2.1
-  share_plus: ^6.3.4
+  share_plus: ^7.0.1
   permission_handler: ^11.3.1
   flutter_ringtone_player: ^4.0.0+4
 
