--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,13 @@ dependencies:
   cupertino_icons: ^1.0.3
   collection: ^1.15.0
   wakelock_plus: ^1.3.2
-  path_provider: ^2.0.2
+  path_provider: ^2.1.5
   intl: ^0.19.0
-  flutter_beep: ^1.0.0
+  flutter_beep_plus: ^0.0.3
   excel: ^4.0.3
-  open_file: ^3.2.1
+  open_file: ^3.5.10
   share_plus: ^7.0.1
-  permission_handler: ^11.3.1
+  permission_handler: ^12.0.0+1
   flutter_ringtone_player: ^4.0.0+4
 
 dev_dependencies:
