--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   share_plus: ^7.0.1
   permission_handler: ^12.0.0+1
   flutter_ringtone_player: ^4.0.0+4
+  flutter_tts: ^4.2.2
 
 dev_dependencies:
   flutter_test:
