--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,6 @@ dependencies:
   open_file: ^3.5.10
   share_plus: ^7.0.1
   permission_handler: ^12.0.0+1
-  flutter_ringtone_player: ^4.0.0+4
   flutter_tts: ^4.2.2
 
 dev_dependencies:
@@ -57,9 +56,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/sounds/mixkit-video-game-treasure-2066.wav
-    - assets/sounds/mixkit-positive-notification-951.wav
+#  assets:
+#    - assets/sounds/mixkit-video-game-treasure-2066.wav
+#    - assets/sounds/mixkit-positive-notification-951.wav
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
